--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "deploy:commands": "npm run build && node dist/deploy-commands.js",
     "dev": "npm run build && node dist/index.js"
   },
   "keywords": [],
